Update Configurações “general”

--- a/content/settings.json
+++ b/content/settings.json
@@ -1,5 +1,5 @@
 {
-  "domain": "tecbytess.com.br",
+  "domain": "tecbytes.com.br",
   "currency_symbol": "R$",
   "primary_color": "#222831",
   "theme": {
