--- a/content/settings.json
+++ b/content/settings.json
@@ -8,7 +8,7 @@
   },
   "bg_color": "#ffffff",
   "logo": "/img/uploads/novo-logo3.png",
-  "name": "tecbytes",
+  "name": "Tecbytes comercio de eletronicos e licenças premium",
   "short_name": "tecbytes",
   "lang": "pt_br",
   "currency": "BRL",
