--- a/content/settings.json
+++ b/content/settings.json
@@ -1,5 +1,6 @@
 {
   "domain": "tecbytes.com.br",
+  "repository": "ecomplus-stores/tecbytes",
   "currency_symbol": "R$",
   "primary_color": "#222831",
   "theme": {
