Update Configurações “general”

--- a/content/settings.json
+++ b/content/settings.json
@@ -21,6 +21,6 @@
   "secondary_color": "#393e46",
   "icon": "/img/uploads/novo-logo34.png",
   "store_id": 47157,
-  "description": "Tecbytes comercio de eletronicos e licenças premium",
+  "description": "comercio de eletrônicos e licenças premium",
   "large_icon": "/img/uploads/novo-logo34.png"
 }
